# tanalytics

./: .env.example  .gitignore  Justfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: config.py  main.py  schemas.py  twitch_client.py
