[project]
name = "TAnalytics"
version = "0.1.0"
description = "A FastAPI service to interact with the Twitch API."
authors = [{ name = "Greg0109", email = "greg.rabago@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "httpx",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
